# blosc2_htj2k

./: .gitmodules  ANNOUNCE.md  CMakeLists.txt  README-DEVELOPERS.md  README.md  RELEASE_NOTES.md  RELEASING.rst  blosc2_symbols.txt  installation_script.sh  pyproject.toml  requirements-build.txt  requirements-test.txt  setup.py
.github/workflows/: cibuildwheels.yml  test-python-blosc2-registry.yml
bench/: encode-blocking.ipynb  encode-blocking.py  encode-blosc2.py  encode-chunking-AppleM1-asahi.ipynb  encode-chunking-AppleM1.ipynb  encode-chunking-MacMini-i8500B.ipynb  encode-chunking-Ryzen-7950X3D.ipynb  encode-chunking-blocking-AppleM1.ipynb  encode-chunking-blocking-Ryzen-7950X3D.ipynb  encode-chunking-blocking-i13900K.ipynb  encode-chunking-i13900K.ipynb  encode-hdf5.ipynb  encode-hdf5.py  encode-lossless.py  requirements.txt
blosc2_grok/: __init__.py  blosc2_grok_plugins.json
blosc2_htj2k/: __init__.py  blosc2_htj2k_plugins.json
examples/: cpp_quickstart.cpp  params.py  quickstart.py  roundtrip.py
src/: CMakeLists.txt  b2nd_layout.cpp  b2nd_layout.h  blosc2_grok.cpp  blosc2_grok_public.h  blosc2_htj2k.cpp  blosc2_htj2k.h  blosc2_htj2k_public.h  codec_requests.cpp  codec_requests.h  codestream_detector.cpp  codestream_detector.h  float_quantization.cpp  float_quantization.h  jpeg2000_bootstrap.c  jpeg2000_codec_paths.cpp  jpeg2000_codec_paths.h  plugin_loader.cpp  plugin_loader.h  roundtrip.cpp  runtime_config.cpp  runtime_config.h  test_grok.cpp  utils.h
src/plugin/: htj2k_codec_api.h  htj2k_grok_plugin.cpp  htj2k_kakadu_plugin.cpp  htj2k_openhtj2k_plugin.cpp  j2k_codec_api.h  j2k_grok_plugin.cpp  j2k_kakadu_plugin.cpp  j2k_openhtj2k_plugin.cpp  kakadu_backend.cpp  openhtj2k_backend.cpp
tests/: test_def_params.py  test_htj2k_plugin.py  test_jp2.py  test_replacement_plugin.py
